enum status {
    ACTIVE
    DELETED
}

enum roles {
    USER
    ADMIN
    DOCTOR
}

Table user as u {
  id int [pk, increment]
  rut varchar(200) [not null, unique]
  email varchar(200) [not null, unique]
  name varchar(200)
  last_name varchar(200)
  phone varchar(20)
  mobile varchar(20)
  role roles [not null, default: 'USER']
  password varchar(50)
  date_birth date [not null]
  status status [not null, default: 'ACTIVE']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp
}

Table medical_speciality as ms {
  id int [pk, increment]
  code varchar(10) [not null, unique]
  name varchar(200) [not null]
  status status [not null, default: 'ACTIVE']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp
}

Table medical_center as mc {
  id int [pk, increment]
  code varchar(10) [not null, unique]
  name varchar(200) [not null]
  address varchar(200) [not null]
  phone varchar(200)
  email varchar(100)
  status status [not null, default: 'ACTIVE']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp
}

Table medial_building as mb {
  id int [pk, increment]
  code varchar(10) [not null, unique]
  name varchar(200) [not null]
  medical_center_id int [ref: > mc.id, not null]
  status status [not null, default: 'ACTIVE']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp
}

Table medical_office as mo {
  id int [pk, increment]
  code varchar(10) [not null, unique]
  floor varchar(20) [not null]
  medial_building_id int [ref: > mb.id, not null]
  status status [not null, default: 'ACTIVE']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp
}


Table medical_appointment as ma {
  id int [pk, increment]
  schedule datetime [not null]
  user_doctor_id int [ref: > u.id, not null]
  medical_office_id int [ref: > mo.id,not null]
  status status [not null, default: 'ACTIVE']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp
}


Table medical_appointment_reserved as ums {
  id int [pk, increment]
  medical_appointment_id int [ref: > ma.id, not null]
  user_id int [ref: > u.id, not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp
  
  Note: 'Reserva de cita medica'
}

Table user_medical_speciality as ums {
  id int [pk, increment]
  medical_speciality_id int [ref: > ms.id, not null]
  user_id int [ref: > u.id, not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp
  
  Note: 'Asociación entre usuario doctor con especialidad medica'
}

Table user_medical_center as uds {
  id int [pk, increment]
  medical_center_id int [ref: > mc.id, not null]
  user_id int [ref: > u.id, not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp
  
  Note: 'Asociación entre usuario doctor con centro medico'
}